--- a/public/asst-1/style-jian.css
+++ b/public/asst-1/style-jian.css
@@ -1,10 +1,16 @@
+.body {
+    background-color: #badff5;
+    font-family: 'Merriweather', serif;
+    
+}
 .header {
     display: flex;
     background-color: #13628F;
     color: #FFD69E;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 15px;
+    margin: 15px;
     flex-flow: row wrap;
 
 }
@@ -16,15 +22,18 @@
 
 .content {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     max-width: 960px;
 }
 
 .body-image {
-    
+    border: solid 1px;
+    border-radius: 4px;
+    width: 100%;
 }
 .nested1 {
     max-width: 33%;
+    align-content: safe center;
 }
 
 .nested2{
