--- a/public/asst-1/style.css
+++ b/public/asst-1/style.css
@@ -18,6 +18,10 @@
 
 .container{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .wrapper .container > div{
@@ -26,6 +30,8 @@
 
 div > img ~ p{
     border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
 }
 
 
