--- a/public/asst-1/style-jian.css
+++ b/public/asst-1/style-jian.css
@@ -10,7 +10,8 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    margin: 15px;
+    padding: 15px;
+    margin-bottom: 15px;
     flex-flow: row wrap;
 
 }
@@ -20,9 +21,11 @@
     justify-content: center;
 }
 
-.content {
+.container {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
+    align-items: flex-start;
+    justify-content: space-between;
     max-width: 960px;
 }
 
@@ -32,6 +35,7 @@
     width: 100%;
 }
 .nested1 {
+    margin-right: 15px;
     max-width: 33%;
     align-content: safe center;
 }
@@ -40,3 +44,7 @@
     min-width: 33%;
 }
 
+@media (max-width: 1000px) {
+    .container {justify-content: center;}
+    .nested1 {flex-direction: row; justify-content: space-evenly; margin-bottom: 15px;}
+}
