--- a/public/asst-1/style.css
+++ b/public/asst-1/style.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
+    /*align-items: flex-start;*/
     justify-content: space-between;
 }
 
